Remove green from logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <header>
                 <nav class="navbar">
                     <div class="navbar-nav container">
-                        <div class="navbar-logo"><span class="text-primary"><span class="lg-view">DollarPerHour</span><span class="sm-view"><span class="text-green">$</span>PerHour</span></span> Calculator</div>
+                        <div class="navbar-logo"><span class="text-primary"><span class="lg-view">DollarPerHour</span><span class="sm-view">$PerHour</span></span> Calculator</div>
                         <i class="theme-icon" :class="iconTheme" @click="darkTheme = !darkTheme"></i>
                         <!-- <div class="navbar-menu">
                             <span>Built by Zack Plauché</span>
