--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="navbar-nav container">
                         <div class="navbar-logo"><span class="text-primary">
                             <span class="lg-view">DollarPerHour</span>
-                            <span class="sm-view"><span :class="{ 'text-green': darkTheme }">$</span>PerHour</span></span>
+                            <span class="sm-view">$PerHour</span></span>
                             Calculator</div>
                         <i class="theme-icon" :class="iconTheme" @click="darkTheme = !darkTheme"></i>
                         <!-- <div class="navbar-menu">
