Add favicon and add to home screen logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="img/dph-logo-dark.png" type="image/x-icon">
+
+        <!-- Apple & Android Logo -->
+        <link rel="apple-touch-icon" sizes="128x128" href="img/dph-logo-dark.png">
+        
         <!-- Custom Styles-->
         <link rel="stylesheet" href="style.css">
 
