--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Apple & Android Logo -->
         <link rel="apple-touch-icon" sizes="128x128" href="img/dph-logo-dark.png">
-        <link rel="icon" sizes="192x192" href="img/dph-logo-dark-hrz.png">
+        <link rel="icon" sizes="192x192" href="img/dph-logo-dark-hrez.png">
         
         <!-- Custom Styles-->
         <link rel="stylesheet" href="style.css">
