Add dollar sign to logo to see what it looks like

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="navbar-nav container">
                         <div class="navbar-logo"><span class="text-primary">
                             <span class="lg-view">DollarPerHour</span>
-                            <span class="sm-view">DPH</span></span>
+                            <span class="sm-view">$DPH</span></span>
                             Calculator</div>
                         <i class="theme-icon" :class="iconTheme" @click="darkTheme = !darkTheme"></i>
                         <!-- <div class="navbar-menu">
