--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
         
         <!-- Favicon -->
-        <link rel="shortcut icon" href="img/dph-logo-dark.png" type="image/x-icon">
+        <link rel="shortcut icon" href="img/dph-logo-dark-32x32.png" type="image/x-icon">
 
         <!-- Apple & Android Logo -->
-        <link rel="apple-touch-icon" sizes="128x128" href="img/dph-logo-dark.png">
-        <link rel="icon" sizes="192x192" href="img/dph-logo-dark-hrez.png">
+        <link rel="apple-touch-icon" sizes="128x128" href="img/dph-logo-dark-128x128.png">
+        <link rel="icon" sizes="192x192" href="img/dph-logo-dark-192x192.png">
         
         <!-- Custom Styles-->
         <link rel="stylesheet" href="style.css">
