--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            var viewport = document.querySelector("meta[name=viewport]");
+            viewport.setAttribute("content", viewport.content + ", height=" + window.innerHeight);
+        </script>
 
         <!-- Vue CDN -->
         <script src="https://unpkg.com/vue@next"></script>
