--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
                         <div class="calculator-body">
                             <div class="field">
                                 <label for="hours">Hours</label>
-                                <input type="number" v-model="hours" min="0">
+                                <input type="number" name="hours" v-model="hours" min="0">
                             </div>
                             <div class="field">
-                                <label for="hours">Minutes</label>
-                                <input type="number" v-model="minutes" min="0">
+                                <label for="minutes">Minutes</label>
+                                <input type="number" name="minutes" v-model="minutes" min="0">
                             </div>
                             <div class="field">
-                                <label for="hours">Seconds</label>
-                                <input type="number" v-model="seconds" min="0">
+                                <label for="seconds">Seconds</label>
+                                <input type="number" name="seconds" v-model="seconds" min="0">
                             </div>
                             <hr>
                             <div class="field">
-                                <label>Hourly Rate</label>
-                                <input type="number" step="0.01" v-model="hourlyRate" min="0.00">
+                                <label for="hourly_rate">Hourly Rate</label>
+                                <input type="number" name="hourly_rate" step="0.01" v-model="hourlyRate" min="0.00">
                             </div>
                         </div>
                         <div class="calculator-footer">
