--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
         <meta name="description" content="A calculator that takes in inputs of how much time was worked and an hourly rate then returns how much money was earned.">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Mobile Viewport Height Onscreen Keyboard Fix -->
         <script>
             var viewport = document.querySelector("meta[name=viewport]");
             viewport.setAttribute("content", viewport.content + ", height=" + window.innerHeight);
         </script>
+
+        <!-- PWA Service Worker -->
         <script>
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('/sw.js');
