--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="A calculator that takes in inputs of how much time was worked and an hourly rate then returns how much money was earned.">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="manifest" href="/manifest.json">
 
         <!-- Mobile Viewport Height Onscreen Keyboard Fix -->
         <script>
@@ -16,7 +17,7 @@
         <!-- PWA Service Worker -->
         <script>
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/sw.js');
+                navigator.serviceWorker.register('./sw.js');
             }
         </script>
 
