Add vue.global.js to root directory instead of using CDN

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </script>
 
         <!-- Vue CDN -->
-        <script src="https://unpkg.com/vue@next"></script>
+        <!-- <script src="https://unpkg.com/vue@next"></script> -->
+        <script src="vue.global.js"></script>
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
